k8s/microservice_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1-deployment
  namespace: sa-p7
  labels:
    app: microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
        - name: microservice1-container
          image: image_ms1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: microservice1-service
  namespace: sa-p7
spec:
  selector:
    app: microservice1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
