k8s/microservice_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2-deployment
  namespace: sa-p5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
        - name: microservice2
          image: zeita/ms2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: microservice2-service
  namespace: sa-p5
spec:
  selector:
    app: microservice2
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
