k8s/microservice_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice3-deployment
  namespace: sa-p7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice3
  template:
    metadata:
      labels:
        app: microservice3
    spec:
      containers:
        - name: microservice3
          image: image_ms3
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: microservice3-service
  namespace: sa-p7
spec:
  selector:
    app: microservice3
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
